# betting-to-json

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
app/: main.py
app/common/: exception.py  table_builder.py  utils.py
app/domain/: bet.py  mode.py
app/flow/: input_management.py
app/json/: default_json.json
app/json_management/: loading.py  open.py
app/modify/: __init__.py
app/read/: __init__.py
json/: default_json.json
src/common/: exception.py
src/domain/: bet.py
src/flow/: input_management.py
src/json/: loading.py  open.py
src/json_management/: loading.py
src/place/: __init__.py
src/read/: __init__.py
tests/: resource.py  test_domain_object.py  test_exception.py  test_input_management.py  test_json.py  test_read.py  test_table_builder.py  test_utils.py
