[project]
name = "betting-to-json"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pytest (>=8.4.0,<9.0.0)", "mypy (>=1.16.0,<2.0.0)", "ruff (>=0.11.12,<0.12.0)", "pydantic (>=2.11.5,<3.0.0)", "pytest-coverage (>=0.0,<0.1)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
